# NexusERP

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_AND_FLOW.md  README.md  TERMINOLOGY_SIMPLIFICATION.md  delete_business_data.py  pyproject.toml  requirements.txt  todo.md
app/: __init__.py
app/forms/: bom_forms.py  product_forms.py  purchase_forms.py  sales_forms.py
app/models/: inventory.py  manufacturing_order.py  procurement_request.py  product.py  purchase_order_line.py  stock_transfer.py  user.py  warehouse.py
app/routes/: auth.py  copilot.py  customers.py  inventory.py  kanban.py  landing.py  procurement.py  products.py  purchase.py  sales.py  vendors.py
app/seed/: sample_products.py
app/services/: risk_service.py
app/services/admin/: data_service.py
app/services/inventory/: inventory_service.py  stock_service.py  transfer_service.py
app/services/manufacturing/: manufacturing_service.py  production_service.py
app/services/procurement/: autopilot_service.py  procurement_engine.py
app/services/purchase/: purchase_service.py  receiving_service.py
app/services/sales/: sales_service.py
app/utils/: constants.py
instance/: nexuserp.db
migrations/versions/: 2003af2883d8_add_warehouse_and_location_tables.py  4b9cd66f8e2a_add_warehouse_and_location_to_.py  dbd6a122567d_add_stock_transfer_and_multi_location_.py
tests/: test_customers.py  test_inventory.py  test_location_replenishment.py  test_procurement.py  test_purchase.py  test_sales.py  test_vendors.py  test_warehouse_management.py  test_warehouse_transfers.py
(+44 files in other folders)
