[project]
name = "nexuserp"
version = "0.1.0"
description = "Flask-based Manufacturing ERP System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.7",
    "flask-bcrypt>=1.0.1",
    "flask-socketio>=5.4.1",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "python-dotenv>=1.1.0",
    "python-barcode>=0.15.1",
    "Pillow>=11.1.0",
    "email-validator>=2.2.0",
    "google-genai>=2.8.0",
]

[project.scripts]
nexuserp = "app:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
